[feat] update properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:mariadb://192.168.100.216:3306/rest_docs?characterEncoding=UTF-8&ServerTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Laonpp00..L
 
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
